--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "jwt-auth-tuto-server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "bruno",
-  "license": "ISC"
+   "name": "jwt-auth-tuto-server",
+   "version": "0.0.1",
+   "description": "Awesome project developed with TypeORM.",
+   "devDependencies": {
+      "ts-node": "3.3.0",
+      "@types/node": "^8.0.29",
+      "typescript": "3.3.3333"
+   },
+   "dependencies": {
+      "typeorm": "0.2.38",
+      "reflect-metadata": "^0.1.10",
+      "pg": "^8.4.0"
+   },
+   "scripts": {
+      "start": "ts-node src/index.ts"
+   }
 }
