feat: add docker compose

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
       "pg": "^8.4.0"
    },
    "scripts": {
-      "start": "ts-node src/index.ts"
+      "start": "ts-node src/index.ts",
+      "up": "docker-compose up -d",
+      "down": "docker-compose down"
    }
 }
