--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
       "graphql": "^16.0.0",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
+      "type-graphql": "^1.1.1",
       "typeorm": "0.2.38"
    },
    "devDependencies": {
