--- a/server/package.json
+++ b/server/package.json
@@ -15,13 +15,17 @@
    "devDependencies": {
       "@types/express": "^4.17.13",
       "@types/graphql": "^14.5.0",
+      "@types/jest": "^27.0.2",
       "@types/node": "^16.11.6",
       "git-commit-msg-linter": "^3.2.8",
+      "jest": "^27.3.1",
+      "ts-jest": "^27.0.7",
       "ts-node": "10.4.0",
       "typescript": "4.4.4"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
+      "test": "jest",
       "up": "docker-compose up -d",
       "down": "docker-compose down"
    }
