--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,7 @@
       "typescript": "4.4.4"
    },
    "scripts": {
-      "start": "ts-node src/index.ts",
+      "dev": "ts-node src/index.ts",
       "test": "jest",
       "up": "docker-compose up -d",
       "down": "docker-compose down"
