--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
    "license": "ISC",
    "dependencies": {
       "apollo-server-express": "^3.4.0",
+      "bcrypt": "^5.0.1",
       "express": "^4.17.1",
       "graphql": "^15.7.2",
       "pg": "^8.4.0",
