--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
    "license": "ISC",
    "dependencies": {
       "apollo-server-express": "^3.4.0",
-      "bcrypt": "^5.0.1",
+      "bcryptjs": "^2.4.3",
       "express": "^4.17.1",
       "graphql": "^15.7.2",
       "pg": "^8.4.0",
@@ -14,6 +14,7 @@
       "typeorm": "0.2.38"
    },
    "devDependencies": {
+      "@types/bcryptjs": "^2.4.2",
       "@types/express": "^4.17.13",
       "@types/graphql": "^14.5.0",
       "@types/jest": "^27.0.2",
