--- a/server/package.json
+++ b/server/package.json
@@ -21,12 +21,13 @@
       "@types/node": "^16.11.6",
       "git-commit-msg-linter": "^3.2.8",
       "jest": "^27.3.1",
+      "nodemon": "^2.0.14",
       "ts-jest": "^27.0.7",
       "ts-node": "10.4.0",
       "typescript": "4.4.4"
    },
    "scripts": {
-      "dev": "ts-node src/index.ts",
+      "dev": "nodemon --exec ts-node src/index.ts",
       "test": "jest",
       "up": "docker-compose up -d",
       "down": "docker-compose down"
