--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
       "bcryptjs": "^2.4.3",
       "express": "^4.17.1",
       "graphql": "^15.7.2",
+      "jsonwebtoken": "^8.5.1",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.10",
       "type-graphql": "^1.1.1",
@@ -18,6 +19,7 @@
       "@types/express": "^4.17.13",
       "@types/graphql": "^14.5.0",
       "@types/jest": "^27.0.2",
+      "@types/jsonwebtoken": "^8.5.5",
       "@types/node": "^16.11.6",
       "git-commit-msg-linter": "^3.2.8",
       "jest": "^27.3.1",
