--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
       "apollo-server-express": "^3.4.0",
       "bcryptjs": "^2.4.3",
       "cors": "^2.8.5",
+      "dotenv": "^10.0.0",
       "express": "^4.17.1",
       "graphql": "^15.7.2",
       "jsonwebtoken": "^8.5.1",
