--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
    "dependencies": {
       "apollo-server-express": "^3.4.0",
       "bcryptjs": "^2.4.3",
+      "cookie-parser": "^1.4.5",
       "cors": "^2.8.5",
       "dotenv": "^10.0.0",
       "express": "^4.17.1",
@@ -18,6 +19,7 @@
    },
    "devDependencies": {
       "@types/bcryptjs": "^2.4.2",
+      "@types/cookie-parser": "^1.4.2",
       "@types/express": "^4.17.13",
       "@types/graphql": "^14.5.0",
       "@types/jest": "^27.0.2",
