--- a/web/package.json
+++ b/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "^4.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -10,6 +11,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
@@ -20,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": [
@@ -41,6 +45,11 @@
     ]
   },
   "devDependencies": {
-    "git-commit-msg-linter": "^3.2.8"
+    "@graphql-codegen/cli": "2.2.2",
+    "@types/graphql": "^14.5.0",
+    "git-commit-msg-linter": "^3.2.8",
+    "@graphql-codegen/typescript": "2.3.0",
+    "@graphql-codegen/typescript-react-apollo": "3.2.0",
+    "@graphql-codegen/typescript-operations": "2.2.0"
   }
 }
