--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/client": "^3.4.16",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -46,10 +46,10 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.2.2",
-    "@types/graphql": "^14.5.0",
-    "git-commit-msg-linter": "^3.2.8",
     "@graphql-codegen/typescript": "2.3.0",
+    "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.0",
-    "@graphql-codegen/typescript-operations": "2.2.0"
+    "@types/graphql": "^14.5.0",
+    "git-commit-msg-linter": "^3.2.8"
   }
 }
