--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "graphql": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
@@ -50,6 +51,7 @@
     "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.0",
     "@types/graphql": "^14.5.0",
+    "@types/react-router-dom": "^5.3.2",
     "git-commit-msg-linter": "^3.2.8"
   }
 }
