--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "apollo-boost": "^0.4.9",
+    "apollo-link-token-refresh": "^0.3.2",
     "graphql": "^16.0.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -51,6 +53,7 @@
     "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/typescript-react-apollo": "3.2.0",
     "@types/graphql": "^14.5.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/react-router-dom": "^5.3.2",
     "git-commit-msg-linter": "^3.2.8"
   }
