feat: add docker

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,5 @@
 ACCESS_TOKEN_SECRET=kjaçlsdjflakjsdçlfj
 REFRESH_TOKEN_SECRET=lkjalejflçkaef
+PORT=4000
+DATABASE_HOST=localhost
+CORS_ORIGIN=localhost
