--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
    },
    "scripts": {
       "dev": "nodemon --exec ts-node src/index.ts",
+      "build": "tsc",
       "test": "jest",
       "up": "docker-compose up -d",
       "down": "docker-compose down"
